--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -32,7 +32,8 @@ open_scenes=PackedStringArray("res://main.tscn", "res://jeff.tscn")
 current_scene="res://jeff.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [EditorWindow]
 
@@ -42,17 +43,17 @@ position=Vector2i(66, 69)
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
+open_scripts=["res://jeff.gd"]
+selected_script="res://jeff.gd"
 open_help=[]
 script_split_offset=200
 list_split_offset=0
-zoom_factor=1.0
+zoom_factor=1.5714284
 
 [GameView]
 
-floating_window_rect=Rect2i(0, 0, 0, 0)
-floating_window_screen=-1
+floating_window_rect=Rect2i(731, 371, 1164, 695)
+floating_window_screen=0
 
 [ShaderEditor]
 
