--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -29,3 +29,12 @@ last_mode=1
 [debug_options]
 
 run_debug_collisions=true
+
+[linked_properties]
+
+Sprite2D:scale=false
+
+[color_picker]
+
+picker_shape=3
+recent_presets=PackedColorArray(1, 1, 1, 1, 1.3235956e-07, 0.19938311, 0.27849513, 1)
